feat: changed supported mimetypes into config
