# src/main/openapi/onecx-document-internal.yaml
@@ -497,102 +497,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/SupportedMimeType'
-        "404":
-          description: Not found
-    post:
-      security:
-        - oauth2: [ ocx-doc:all, ocx-doc:write ]
-      tags:
-        - SupportedMimeTypeController
-      description: Creates supported mime-type
-      operationId: createSupportedMimeType
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SupportedMimeTypeCreateUpdate'
-      responses:
-        "201":
-          description: Created supported mime-type
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SupportedMimeType'
-        "404":
-          description: Not found
-  /internal/supported-mime-type/{id}:
-    get:
-      security:
-        - oauth2: [ ocx-doc:all, ocx-doc:read ]
-      tags:
-        - SupportedMimeTypeController
-      description: Gets supported mime-type by id
-      operationId: getSupportedMimeTypeById
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Ok
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SupportedMimeType'
-        "404":
-          description: Not found
-    put:
-      security:
-        - oauth2: [ ocx-doc:all, ocx-doc:write ]
-      tags:
-        - SupportedMimeTypeController
-      description: Updates supported mime-type by id
-      operationId: updateSupportedMimeTypeById
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SupportedMimeTypeCreateUpdate'
-      responses:
-        "200":
-          description: Updated supported mime-type by id
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SupportedMimeType'
-        "404":
-          description: Not found
-    delete:
-      security:
-        - oauth2: [ ocx-doc:all, ocx-doc:delete ]
-      tags:
-        - SupportedMimeTypeController
-      description: Deletes supported mime-type by id
-      operationId: deleteSupportedMimeTypeId
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        "204":
-          description: Deleted supported mime-type by id
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemDetailResponse'
+                  type: string
         "404":
           description: Not found
   /internal/attachment/metadata:
@@ -685,7 +590,7 @@ components:
           type: string
         validFor:
           $ref: '#/components/schemas/TimePeriod'
-        mimeTypeId:
+        mimeType:
           type: string
         file:
           type: string
@@ -720,7 +625,7 @@ components:
         validFor:
           $ref: '#/components/schemas/TimePeriod'
         mimeType:
-          $ref: '#/components/schemas/SupportedMimeType'
+          type: string
         fileName:
           type: string
         storageUploadStatus:
@@ -1299,9 +1204,7 @@ components:
           type: string
         attachmentDescription:
           type: string
-        mimeTypeId:
-          type: string
-        mimeTypeName:
+        mimeType:
           type: string
         specificationId:
           type: string
@@ -1314,35 +1217,6 @@ components:
         objectReferenceType:
           type: string
         objectReferenceId:
-          type: string
-    SupportedMimeTypeCreateUpdate:
-      required:
-        - name
-      type: object
-      properties:
-        name:
-          type: string
-        description:
-          type: string
-    SupportedMimeType:
-      type: object
-      properties:
-        modificationCount:
-          format: int32
-          type: integer
-        creationDate:
-          $ref: '#/components/schemas/OffsetDateTime'
-        creationUser:
-          type: string
-        modificationDate:
-          $ref: '#/components/schemas/OffsetDateTime'
-        modificationUser:
-          type: string
-        id:
-          type: string
-        name:
-          type: string
-        description:
           type: string
     TimePeriod:
       type: object
